--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede"]
 version = "0.1.0"
 
+[deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
+
 [compat]
 julia = "1.5"
 
