--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 BinaryTraits = "190e46ec-f771-4705-b939-984896f7be0e"
+BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CMAEvolutionStrategy = "8d3b24bd-414e-49e0-94fb-163cc3a3e411"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
@@ -33,11 +34,11 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
-Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 ZigZagBoomerang = "36347407-b186-4a6a-8c98-4f4567861712"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
