--- a/Project.toml
+++ b/Project.toml
@@ -22,11 +22,14 @@ HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
+LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+MultistartOptimization = "3933049c-43be-478e-a8bb-6e0f7fd53575"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
@@ -34,6 +37,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
