Fix some stuff, still lots to do

--- a/Project.toml
+++ b/Project.toml
@@ -4,47 +4,33 @@ authors = ["Paul Tiede"]
 version = "0.1.0"
 
 [deps]
-AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
-Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 BinaryTraits = "190e46ec-f771-4705-b939-984896f7be0e"
-BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
-CMAEvolutionStrategy = "8d3b24bd-414e-49e0-94fb-163cc3a3e411"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-EllipticalSliceSampling = "cad2338a-1db2-11e9-3401-43bc07c9ede2"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
-MultistartOptimization = "3933049c-43be-478e-a8bb-6e0f7fd53575"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
-Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
-TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
-TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
-ZigZagBoomerang = "36347407-b186-4a6a-8c98-4f4567861712"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 julia = "1.5"
