--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.1.0"
 
 [deps]
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
-BinaryTraits = "190e46ec-f771-4705-b939-984896f7be0e"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -13,27 +12,31 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
-LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
-NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
-Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
-Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
-ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
-ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
 
 [compat]
-ProgressMeter = "1.6"
 julia = "1.5,1.6"
+AstroTime="0.6"
+Distributions = "0.23,0.24,0.25"
+DocStringExtensions = "0.7,0.8"
+FFTW = "1"
+HypergeometricFunctions = "0.2,0.3"
+ImageFiltering = "0.5,0.6"
+Interpolations = "0.12,0.13"
+LoopVectorization = "0.10,0.11,0.12"
+Memoization = "0.1"
+NFFT = "0.5,0.6"
+PaddedViews = "0.5"
+SpecialFunctions = "1"
+StatsBase = "0.31,0.32,0.33"
+StructArrays = "0.3,0.4,0.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
