--- a/Project.toml
+++ b/Project.toml
@@ -24,19 +24,19 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 [compat]
 AstroTime = "0.6"
 Distributions = "0.22,0.23,0.24,0.25"
-DocStringExtensions = "0.7,0.8"
-FFTW = "1"
+DocStringExtensions = "0.6,0.7,0.8"
+FFTW = "^1"
 HypergeometricFunctions = "0.2,0.3"
-ImageFiltering = "0.5,0.6"
+ImageFiltering = "0.5,0.5,0.6"
 Interpolations = "0.12,0.13"
-LoopVectorization = "0.10,0.11,0.12"
-Memoization = "0.1"
+LoopVectorization = "0.10 - 0.13"
+Memoization = "^0.1"
 NFFT = "0.5,0.6"
 PaddedViews = "0.5"
-SpecialFunctions = "0.10 - 0.25,1"
-StatsBase = "0.31,0.32,0.33"
+SpecialFunctions = "0.10 - 1"
+StatsBase = "0.31,0.32,0.33,0.34"
 StructArrays = "0.3,0.4,0.5"
-julia = "1.5,1.6"
+julia = "^1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
