--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
