--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Distributions = "0.22,0.23,0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8"
 FFTW = "^1"
 HypergeometricFunctions = "0.2,0.3"
-ImageFiltering = "0.5,0.5,0.6"
+ImageFiltering = "0.5,0.5,0.6, 0.7"
 Interpolations = "0.12,0.13"
 LoopVectorization = "0.10 - 0.13"
 Memoization = "^0.1"
