--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ FFTW = "^1"
 HypergeometricFunctions = "0.2,0.3"
 ImageFiltering = "0.5,0.5,0.6"
 Interpolations = "0.12,0.13"
-LoopVectorization = "0.10 - 0.13"
+LoopVectorization = "0.12"
 Memoization = "^0.1"
 NFFT = "0.5,0.6"
 PaddedViews = "0.5"
