--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ LoopVectorization = "0.12"
 Memoization = "^0.1"
 NFFT = "0.5,0.6"
 PaddedViews = "0.5"
-SpecialFunctions = "0.10 - 1"
+SpecialFunctions = "0.10 - 1, 2"
 StatsBase = "0.31,0.32,0.33,0.34"
 StructArrays = "0.3,0.4,0.5"
 julia = "^1.5"
