--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,7 @@ Interpolations = "0.12,0.13"
 KeywordCalls = "0.2"
 LoopVectorization = "0.12"
 MappedArrays = "0.3,0.4"
+MeasureBase = "0.5"
 NFFT = "0.5,0.6"
 PaddedViews = "0.5"
 PyCall = "^1"
