--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ AstroTime = "0.6,0.7"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8"
 FFTW = "^1"
+FillArrays = "0.12"
 Interpolations = "0.12,0.13"
 KeywordCalls = "0.2"
 LoopVectorization = "0.12"
