--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,9 +74,10 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
-            using ROSEx
-            doctest(ROSEx)'
-      - run: julia --project=docs docs/make.jl
+            using ROSE
+            doctest(ROSE)'
+      - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+      - run: julia --project=docs docs/make.jl
