--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,8 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
-            using ROSEx
-            doctest(ROSEx)'
+            using ROSE
+            doctest(ROSE)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
