Name change again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,8 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
-            using ROSE
-            doctest(ROSE)'
+            using Comrade
+            doctest(Comrade)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
