--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-ROSE = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
