--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ MeasureBase = "0.5"
 NFFT = "0.5,0.6, 0.7"
 PaddedViews = "0.5"
 PyCall = "^1"
-SpecialFunctions = "0.10 - 1,2"
+SpecialFunctions = "0.10, 1.0, 2"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
