--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ KeywordCalls = "4d827475-d3e4-43d6-abe3-9688362ede9f"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
+MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
