--- a/Project.toml
+++ b/Project.toml
@@ -48,6 +48,7 @@ KeywordCalls = "0.2"
 LoopVectorization = "0.12"
 MappedArrays = "0.3,0.4"
 MeasureBase = "0.5"
+MeasureTheory = "0.13"
 NFFT = "0.5,0.6, 0.7"
 PaddedViews = "0.5"
 PyCall = "^1"
