--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.arch }}
       - run: python -m pip install --upgrade pip
-      - run: python -m pip install ipython
+      - run: python -m pip install ipython requests
       - run: python -m pip install ehtim
 
       - uses: julia-actions/setup-julia@v1
