--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ LoopVectorization = "0.12"
 MappedArrays = "0.3,0.4"
 MeasureBase = "0.5"
 MeasureTheory = "0.13"
-NFFT = "0.5,0.6, 0.7"
+NFFT = "0.5,0.6, 0.7, 0.8"
 PaddedViews = "0.5"
 PyCall = "^1"
 Reexport = "1"
