--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -12,11 +12,21 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GCMAES = "4aa9d100-eb0f-11e8-15f1-25748831eb3b"
 GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
+Hyperopt = "93e5fe13-2215-51db-baaf-2e9a34fb2712"
 JuKeBOX = "bcd8bb4e-ee1b-46ca-a648-33f419ff6fce"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
+NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
+NonconvexBayesian = "fb352abc-de7b-48de-9ebd-665b54b5d9b3"
+NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
+SpeedMapping = "f1835b91-879b-4a3f-a438-e4baacf14412"
 TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
