--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ LoopVectorization = "0.12"
 MappedArrays = "0.3,0.4"
 MeasureBase = "0.5"
 MeasureTheory = "0.13"
-NFFT = "0.5,0.6, 0.7, 0.8, 0.9, 0.10"
+NFFT = "0.9, 0.10"
 PaddedViews = "0.5"
 PyCall = "^1"
 RecipesBase = "1"
