--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -53,6 +54,7 @@ MeasureTheory = "0.13"
 NFFT = "0.5,0.6, 0.7, 0.8, 0.9, 0.10"
 PaddedViews = "0.5"
 PyCall = "^1"
+RecipesBase = "1"
 Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
