Update example project

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -16,6 +16,7 @@ GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 Hyperopt = "93e5fe13-2215-51db-baaf-2e9a34fb2712"
 JuKeBOX = "bcd8bb4e-ee1b-46ca-a648-33f419ff6fce"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
