CompatHelper: bump compat for FillArrays to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ ComradeBase = "0.2"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8"
 FFTW = "^1"
-FillArrays = "0.12"
+FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
 KeywordCalls = "0.2"
 LoopVectorization = "0.12"
