--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AdaptiveMCMC = "717c3277-546c-407d-8270-09a39a0919a0"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
 BAT = "c0cd4b16-88b7-57fa-983b-ab80aecada7e"
@@ -19,14 +20,19 @@ MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexBayesian = "fb352abc-de7b-48de-9ebd-665b54b5d9b3"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
 SpeedMapping = "f1835b91-879b-4a3f-a438-e4baacf14412"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
+TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
