--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,13 @@ BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 KeywordCalls = "4d827475-d3e4-43d6-abe3-9688362ede9f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
@@ -24,6 +26,7 @@ MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
+ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -34,6 +37,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
+ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
 AbstractFFTs = "1"
@@ -42,11 +47,13 @@ AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6"
 ChainRulesCore = "1"
 ComradeBase = "0.2"
+DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8"
 FFTW = "^1"
-FillArrays = "0.12"
+FillArrays = "0.12,0.13"
 ForwardDiff = "0.9, 0.10"
+HypercubeTransform = "0.2"
 KeywordCalls = "0.2"
 LoopVectorization = "0.12"
 MappedArrays = "0.3,0.4"
@@ -61,6 +68,7 @@ SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
+TransformVariables = "0.3, 0.4"
 julia = "^1.6"
 
 [extras]
