--- a/Project.toml
+++ b/Project.toml
@@ -61,6 +61,7 @@ MeasureBase = "0.5"
 MeasureTheory = "0.13"
 NFFT = "0.5,0.6, 0.7, 0.8, 0.9, 0.10"
 PaddedViews = "0.5"
+ParameterHandling = "0.4"
 PyCall = "^1"
 RecipesBase = "1"
 Reexport = "1"
