--- a/Project.toml
+++ b/Project.toml
@@ -69,13 +69,14 @@ ParameterHandling = "0.4"
 PyCall = "^1"
 RecipesBase = "1"
 Reexport = "1"
+Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 TransformVariables = "0.3,0.4,0.5,0.6"
-ValueShapes = "0.10"
 TupleVectors = "0.1"
+ValueShapes = "0.10"
 julia = "^1.6"
 
 [extras]
