--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup python
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.arch }}
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install ipython requests
+      - run: python -m pip install ehtim
+
       - uses: julia-actions/setup-julia@v1
         with:
-          version: '1'
+          version: '1.7'
       - run: |
           julia --project=docs -e '
             using Pkg
