--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ examples/Manifest.toml
 docs/Manifest.toml
 examples/Manifest.toml
 docs/src/examples/black_hole_image.md
+docs/src/examples/nonanalytic.md
+docs/src/examples/data.md
