--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ Accessors = "0.1"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6"
 ChainRulesCore = "1"
-ComradeBase = "0.2"
+ComradeBase = "^0.2.5"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8"
