--- a/Project.toml
+++ b/Project.toml
@@ -49,6 +49,7 @@ AbstractDifferentiation = "0.4"
 AbstractFFTs = "1"
 AbstractMCMC = "3"
 Accessors = "0.1"
+ArgCheck = "2"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6"
 ChainRulesCore = "1"
