--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ examples/Manifest.toml
 docs/src/examples/black_hole_image.md
 docs/src/examples/nonanalytic.md
 docs/src/examples/data.md
+LocalPreferences.toml
