--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
+authors = ["Paul Tiede"]
 name = "Comrade"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede"]
@@ -86,6 +87,7 @@ ValueShapes = "0.10"
 julia = "^1.6"
 
 [extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
