--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ docs/src/examples/black_hole_image.md
 docs/src/examples/nonanalytic.md
 docs/src/examples/data.md
 LocalPreferences.toml
+examples/Manifest.toml
