--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -3,12 +3,12 @@ AbstractDifferentiation = "c29ec348-61ec-40c8-8164-b8c60e9d9f3d"
 AdaptiveMCMC = "717c3277-546c-407d-8270-09a39a0919a0"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
-BAT = "c0cd4b16-88b7-57fa-983b-ab80aecada7e"
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GCMAES = "4aa9d100-eb0f-11e8-15f1-25748831eb3b"
@@ -31,6 +31,7 @@ PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 SpeedMapping = "f1835b91-879b-4a3f-a438-e4baacf14412"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -39,3 +40,6 @@ TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
