changed example project

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -5,9 +5,12 @@ AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
+Diffractor = "9f5e2b26-1114-432f-b630-d3fe2085c51c"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
@@ -39,6 +42,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
+Yota = "cd998857-8626-517d-b929-70ad188a48f0"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [extras]
