--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-authors = ["Paul Tiede"]
 name = "Comrade"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+authors = ["Paul Tiede"]
 version = "0.3.1"
 
 [deps]
@@ -11,6 +11,7 @@ Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
+BlockDiagonals = "0a1fb500-61f7-11e9-3c65-f5ef3456f9f0"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -84,7 +85,6 @@ TransformVariables = "0.3,0.4,0.5,0.6"
 TupleVectors = "0.1"
 ValueShapes = "0.10"
 julia = "^1.6"
-
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
