--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -5,6 +5,7 @@ AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
 Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
+BlockDiagonals = "0a1fb500-61f7-11e9-3c65-f5ef3456f9f0"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
@@ -17,7 +18,6 @@ GCMAES = "4aa9d100-eb0f-11e8-15f1-25748831eb3b"
 GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 Hyperopt = "93e5fe13-2215-51db-baaf-2e9a34fb2712"
-JuKeBOX = "bcd8bb4e-ee1b-46ca-a648-33f419ff6fce"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
