--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,6 +3,7 @@ AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
