--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -11,6 +11,7 @@ Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
+Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
@@ -33,6 +34,7 @@ PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 SpeedMapping = "f1835b91-879b-4a3f-a438-e4baacf14412"
