--- a/Project.toml
+++ b/Project.toml
@@ -57,6 +57,7 @@ Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6"
+BlockDiagonals = "0.1"
 ChainRulesCore = "1"
 ComradeBase = "^0.3.1"
 DensityInterface = "0.4"
