--- a/Project.toml
+++ b/Project.toml
@@ -82,6 +82,7 @@ SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
+Tables = "1"
 TransformVariables = "0.5,0.6"
 TupleVectors = "0.1"
 ValueShapes = "0.10"
