CompatHelper: bump compat for MeasureBase to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -69,7 +69,7 @@ ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "^0.2.7"
 KeywordCalls = "0.2"
 MappedArrays = "0.3,0.4"
-MeasureBase = "0.7"
+MeasureBase = "0.7, 0.9"
 MeasureTheory = "0.15"
 NFFT = "0.10, 0.11, 0.12"
 PaddedViews = "0.5"
