--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -6,15 +6,16 @@ version = "0.1.0"
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 
 [compat]
+AbstractMCMC = "4"
 Comrade = "0.3,0.4"
 NestedSamplers = "0.8"
 TupleVectors = "0.1"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
