--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -14,6 +14,7 @@ TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 AbstractMCMC = "4"
 Comrade = "0.3,0.4"
 NestedSamplers = "0.8"
+Reexport = "1"
 TupleVectors = "0.1"
 julia = "1.6"
 
