--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -12,6 +12,8 @@ Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
+MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
+MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
