CompatHelper: bump compat for MCMCDiagnostics to 0.4 for package docs, (keep existing compat)

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -32,7 +32,7 @@ ForwardDiff = "0.10"
 Glob = "1"
 HypercubeTransform = "0.3"
 Literate = "2"
-MCMCDiagnostics = "0.3"
+MCMCDiagnostics = "0.3, 0.4"
 Optimization = "3"
 OptimizationBBO = "0.1"
 OptimizationOptimJL = "0.1"
