--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
+Bessels = "0e736298-9ec6-45e8-9647-e4fc86a2fe38"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
