Polarized image cache working

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
