CompatHelper: add new compat entry for Enzyme at version 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -71,9 +71,9 @@ ComradeBase = "0.4"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
+Enzyme = "0.10"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
-
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
