CompatHelper: add new compat entry for Bessels at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -66,6 +66,7 @@ Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6, 0.7"
+Bessels = "0.2"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
 DensityInterface = "0.4"
@@ -73,7 +74,6 @@ Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
-
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
