--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -21,6 +21,7 @@ HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
