add ContiuousImage cache constructor

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -20,6 +20,8 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+MPIClusterManagers = "e7922434-ae4b-11e9-05c5-9780451d2c66"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
