CompatHelper: add new compat entry for PDMats at version 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -83,6 +83,7 @@ HypercubeTransform = "0.3"
 KeywordCalls = "0.2"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13, 0.14"
+PDMats = "0.11"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
 PrettyTables = "1, 2"
